--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,9 @@
+# Backend API URL
+# For local development: http://localhost:8000 or http://localhost:8002
+# For production: set to your deployed backend URL (e.g., https://api.yourdomain.com)
+# Leave empty to use relative URLs (recommended for production)
+VITE_API_URL=
+
+# Supabase Configuration
 VITE_SUPABASE_URL=https://example.supabase.co
 VITE_SUPABASE_ANON_KEY=example-key
